[gd_scene load_steps=13 format=2]

[ext_resource path="res://mobs/Gunner.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.75, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true

[sub_resource type="SpatialMaterial" id=5]
render_priority = -1
next_pass = SubResource( 7 )
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.5, 0.25, 0.1 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
render_priority = -1
next_pass = SubResource( 6 )
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 0.35, 0.35, 0.5 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=11]
render_priority = -1
next_pass = SubResource( 10 )
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.5, 0.25 )

[sub_resource type="CylinderShape" id=8]

[node name="Gunner" type="KinematicBody" groups=["Enemy"]]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
collision_layer = 4
collision_mask = 11
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="Eyes" type="MeshInstance" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0.3 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Shoot" type="Position3D" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1 )

[node name="MeshInstance2" type="MeshInstance" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0.5 )
mesh = SubResource( 9 )
material/0 = SubResource( 11 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
path_desired_distance = 5.0
target_desired_distance = 10.0
avoidance_enabled = true
neighbor_dist = 5.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="ShootArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ShootArea"]
transform = Transform( 10, 0, 0, 0, 0.25, 0, 0, 0, 10, 0, 0.499663, 0 )
shape = SubResource( 8 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ShootArea" to="." method="_on_ShootArea_body_entered"]
